# ai-team

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  OPENWEBUI_SETUP.md  openclaw_pipe.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
app/: __init__.py  activity.py  config.py  dashboard_index.html  main.py  static.py
app/agents/: __init__.py  base.py  ceo.py  debugger.py  developer.py  engineer.py  hermes.py  planner.py  qa.py  researcher.py  reviewer.py  security.py
app/bridges/: openhands.py
app/dashboard/: router.py
app/kanban/: __init__.py  board.py  db.py  transitions.py
app/llm/: client.py  intent.py  prompts.py
app/models/: __init__.py  agent.py  approval.py  mode.py  release.py  task.py
app/router/: __init__.py  fallback.py  queue.py  registry.py  selector.py
app/routers/: activity.py  agents.py  approvals.py  chat.py  chat_mode.py  goals.py  health.py  releases.py  tasks.py
app/static/: dashboard.html
app/workers/: __init__.py  auto_assigner.py
app/workflows/: __init__.py  classifier.py  engine.py
frontend/: index.html  site.webmanifest
frontend/assets/: Trans-zXW0p81J.js  accept-tos-CbviGpR2.js  admin-dashboard-nLg2vrWU.js  agent-chip-icon-DQ8P45WD.js  agent-settings-CWMktWV4.js  amount-is-valid-DmIqz0OL.js  api-keys-CLgmCPY1.js  app-settings-B0LW_v4f.js  azure-devops-logo-CtJ-npwQ.js  base-modal-BxMBVaD8.js  billing-CRfPv3gh.js  brand-button-MogdpCdt.js  (+154 more)
tests/: conftest.py  test_api_endpoints.py  test_kanban_board.py  test_kanban_transitions.py  test_llm_client.py  test_model_router.py  test_models.py
(+23 files in other folders)
